# promscale

./: .codeclimate.yaml  .codeclimate.yml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .mdox.validate.yaml  .travis.yml  BuildRPMDockerfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  EXTENSION_VERSION  Gopkg.toml  Makefile  NOTICE  README.md  REAMDE.md  bors.toml  build_rpm.sh  config.yml  ct.yaml  docker-compose.yml  glide.yaml  go.mod  go.sum  main.go  promscale.spec  q  renovate.json  sample-docker-prometheus.yml  shell.nix
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  env  renovate.json
docker-compose/: alerts.yml  docker-compose.yaml  otel-collector-config.yml  prometheus.yml  promscale_prometheus.yml  rules.yml  test.sh
docs/: alerting-recording.md  alerting.md  bare-metal-promscale-stack.md  binary.md  cli.md  compression-job-hotfix.md  configuration.md  configuring_prometheus.md  data-model.md  dataset.md  docker.md  downsampling.md  faq.md  getting-started.md  getting_started.md  metric_deletion_and_retention.md  metric_deletion_retention.md  metrics.md  multi_tenancy.md  multinode.md  (+8 more)
extension/: .gitignore  003-enable-pgextwlist.sh  Cargo.toml  DockerMakefile  Dockerfile  Makefile  Readme.md  dependencies.makefile  promscale.control  timescale_prometheus_extra.control
extension/sql/: promscale--0.1--0.1.1.sql  promscale--0.1.1.sql  promscale--0.1.sql  timescale-prometheus.sql  timescale_prometheus_extra--0.1.1.sql  timescale_prometheus_extra--0.1.sql
extension/src/: lib.rs  support.c
(+1006 files in other folders)
