[package]
name = "promscale_rs"
version = "0.1.0"
authors = ["Joshua Lockerman <josh@timescale.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies.timescale-extension-utils]
git = "https://github.com/timescale/timescale-extension-utils"
branch = "master"

[profile.release]
lto = true

[features]
default = []
parse_headers = ["timescale-extension-utils/parse_headers"]
